package NLP.Rule_EX;

import NLP.interface_rule.C_RULE;
import edu.stanford.nlp.semgraph.SemanticGraph;
import edu.stanford.nlp.semgraph.SemanticGraphEdge;

public class C_EX implements C_RULE {
    @Override
    public void C1() {

    }

    @Override
    public void C2() {

    }

    @Override
    public void C3() {

    }

    @Override
    public void C4() {

    }

    @Override
    public void C5() {

    }

    @Override
    public void find_component_noun(SemanticGraph semanticGraph) {

    }

    @Override
    public void fix_compound_noun_list(SemanticGraphEdge semanticGraphEdge) {

    }

}
