package NLP.Rule_EX;

import NLP.interface_rule.R_RULE;

public class R_EX implements R_RULE {
    @Override
    public void R1() {

    }

    @Override
    public void R2() {

    }

    @Override
    public void R3() {

    }

    @Override
    public void R4() {

    }
}
